[package]
name = "zero2prod"
authors = ["Dawum Nam <dawumnam@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde_json = "1.0.68"
axum = "0.6.20"
serde = "1.0.188"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
watch = "0.2.3"
